grafana-simple-resources-way/grafana-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  ports:
  - nodePort: 30985
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  type: LoadBalancer
