grafana-simple-resources-way/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: grafana
    weight: 100
